New upstream version 2.1.5

--- a/INSTALL
+++ b/INSTALL
@@ -24,7 +24,11 @@ The following build packages are needed:
 	make
 	autoconf automake (to build from git source tree rather than tarball)
 The following libraries need to be installed:
-	openssl-devel libnl3-devel ipset-devel iptables-devel
+	openssl-devel libnl3-devel ipset-devel
+For iptables support:
+	libxtables-dev libip6tc-dev libip4tc-dev
+	  or on older installations:
+	iptables-devel
 For magic file identification support:
 	file-devel
 For SNMP support:
