--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+keepalived (1:2.1.5-1ubuntu1ppa1~bionic) bionic; urgency=medium
+
+  * New upstream version 2.1.5
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Fri, 18 Dec 2020 08:54:11 +0900
+
 keepalived (1:2.1.3-1ubuntu1ppa1~bionic) bionic; urgency=medium
 
   * Add debian/gbp.conf to set debian-branch to ubuntu/bionic
