--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+keepalived (1:2.1.5-1ubuntu1ppa1~focal) focal; urgency=medium
+
+  * New upstream version 2.1.5
+  * Set debian-branch to main
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Fri, 18 Dec 2020 08:56:27 +0900
+
 keepalived (1:2.1.3-1ubuntu1ppa1~focal) focal; urgency=medium
 
   * New upstream version 2.1.3
