--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+keepalived (1:2.2.7-1ubuntu1ppa1~jammy) jammy; urgency=medium
+
+  * New upstream version 2.2.7
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Sat, 23 Apr 2022 18:04:27 +0900
+
 keepalived (1:2.2.4-1ubuntu1ppa1~jammy) jammy; urgency=medium
 
   * New upstream version 2.2.4
