--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+keepalived (1:2.2.8-1ppa1ubuntu22.04) jammy; urgency=medium
+
+  * New upstream version 2.2.8
+  * Copy patch for reproducible build from debian
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Wed, 19 Jul 2023 17:23:16 +0900
+
 keepalived (1:2.2.7-1ubuntu1ppa1~jammy) jammy; urgency=medium
 
   * New upstream version 2.2.7
